force-app/main/default/objects/Ticket__c/fields/Arrow_To_Show__c.field-meta.xml
<CustomField>
    <fullName>Arrow_To_Show__c</fullName>
    <formula>If(ISPICKVAL( Priority__c  , &apos;Very Low&apos;), &apos;arrow down lowGreen&apos;, If(ISPICKVAL( Priority__c  , &apos;Low&apos;), &apos;arrow down green&apos;, If(ISPICKVAL( Priority__c  , &apos;Medium&apos;), &apos;arrow up yellow&apos;, If(ISPICKVAL( Priority__c  , &apos;High&apos;), &apos;arrow up orange&apos;, &apos;arrow up red&apos; ) )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrow To Show</label>
    <type>Text</type>
</CustomField>