force-app/main/default/objects/Ticket__c/fields/Assign_to__c.field-meta.xml
<CustomField>
    <fullName>Assign_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign to</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>