force-app/main/default/objects/Ticket__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <displayFormat>TP{0000}</displayFormat>
    <label>Code</label>
    <type>AutoNumber</type>
</CustomField>