force-app/main/default/objects/Ticket__c/fields/Name_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Name_Assign_To__c</fullName>
    <formula>IF(ISBLANK(Assign_to__c),&apos;Not Assigned&apos;,Assign_to__r.Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Assign To</label>
    <type>Text</type>
</CustomField>