force-app/main/default/objects/Ticket__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ticket Type</label>
    <referenceTo>Ticket_Type__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>